# agenterra-rmcp

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/rmcp/: Cargo.toml  README.md
crates/rmcp-macros/: Cargo.toml  README.md
crates/rmcp-macros/src/: lib.rs  tool.rs  tool_handler.rs  tool_router.rs
crates/rmcp/src/: lib.rs  transport.rs
crates/rmcp/src/model/: capabilities.rs  extension.rs
crates/rmcp/tests/: test_complex_schema.rs  test_deserialization.rs  test_logging.rs  test_message_protocol.rs  test_message_schema.rs  test_notification.rs  test_tool_macro_annotations.rs  test_tool_macros.rs  test_tool_routers.rs  test_with_js.rs  test_with_python.rs
docs/: AGENT_INSTRUCTIONS.md  OAUTH_SUPPORT.md
docs/readme/: README.zh-cn.md
examples/: README.md
examples/clients/: Cargo.toml  README.md
examples/clients/src/: collection.rs  everything_stdio.rs  git_stdio.rs  sse.rs  streamable_http.rs
examples/rig-integration/: Cargo.toml
examples/rig-integration/src/: mcp_adaptor.rs
examples/servers/: Cargo.toml  README.md
examples/servers/src/: complex_auth_sse.rs  counter_hyper_streamable_http.rs  counter_sse.rs  counter_sse_directly.rs  counter_stdio.rs  counter_streamhttp.rs  memory_stdio.rs  simple_auth_sse.rs
examples/simple-chat-client/: Cargo.toml
examples/simple-chat-client/src/: config.rs  tool.rs
examples/transport/: Cargo.toml
examples/transport/src/: http_upgrade.rs  named-pipe.rs  tcp.rs  unix_socket.rs  websocket.rs
examples/wasi/: Cargo.toml
examples/wasi/src/: calculator.rs  lib.rs
(+11 files in other folders)
