

[workspace]
members = ["crates/rmcp", "crates/rmcp-macros", "examples/*"]
resolver = "2"

[workspace.dependencies]
agenterra-rmcp = { version = "0.1.5", path = "./crates/rmcp" }
agenterra-rmcp-macros = { version = "0.1.5", path = "./crates/rmcp-macros" }

[workspace.package]
edition = "2024"
version = "0.1.5"
authors = ["4t145 <u4t145@163.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/clafollett/agenterra-rmcp/"
description = "Agenterra fork of Rust SDK for Model Context Protocol"
keywords = ["mcp", "sdk", "tokio", "modelcontextprotocol"]
homepage = "https://github.com/clafollett/agenterra-rmcp"
categories = [
    "network-programming",
    "asynchronous",
]
readme = "README.md"
