

[package]
name = "agenterra-rmcp-macros"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
description = "Agenterra fork of Rust SDK for Model Context Protocol macros library"
documentation = "https://docs.rs/agenterra-rmcp-macros"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"
serde_json = "1.0"
darling = { version = "0.20" }

[features]
[dev-dependencies]